# sdk-js

./: .adr-dir  .earthlyignore  .gherkin-lintrc  .pre-commit-config.yaml  Earthfile  README.md  Tiltfile  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-dev.sh  setup-hooks.sh  sws.toml
.clk/: clk.json
.githooks/: commit-msg  pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  trigger.md  vulnerability.md
apps/: README.md  archive_demo_app.sh
apps/admin/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/create-keyban-app/: index.js  package.json
apps/dashboard/: index.html  package.json  vite.config.js
apps/demo-app/: .eslintrc.cjs  index.html  mv.sh  package.json  tsconfig.json  vite.config.ts
apps/doc-manager/: package.json  readme  tsconfig.json  typedoc.json
apps/dpp-app/: index.html  package.json  vite.config.ts
apps/fid-demo/: index.html  package.json
apps/loyalty-demo/: index.html  package.json  vite.config.ts
apps/mobile-app/: .detoxrc.js  App.tsx  Makefile  (+4 more)
doc/: stack.md
docgen/: package.json  tsconfig.json
docs/: arch_diagrams.md
lib-base/: index.js
mobile/: app.json  package.json
project/: dap-planning.gan  dap-planning.md
scripts/: setup-sdk-yalc.sh
signers/eddsa-server/: Cargo.toml  Earthfile
signers/eddsa-server/src/: dkg.rs  main.rs  routes.rs
signers/eddsa/server/: Cargo.toml  Earthfile
signers/eddsa/server/src/: handlers.rs  lib.rs  main.rs  routes.rs
tools/: commitlint-warning.sh  gitleaks.toml  setup-hooks.sh
(+551 files in other folders)
