[package]
name = "eddsa-server"
version = "0.1.0"
edition = "2021"

[dependencies]
eddsa-common = { path = "../common" }
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
http-body-util = "0.1.1"
hex = "0.4.3"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
serde_json = "1.0.117"